     of specific type in the field
 * Language and i18n:
   * Updated translations: Czech, French, German, Latin, Polish,
     Portuguese (Brazil)
 * Music and sound effects:
   * Updated music tracks: Legends of the North, Breaking the Chains
 * User interface:
   * Show selected item after a listbox resize (bug #13995)

Version 1.7.8-beta1:
 * Campaigns:
   * Under the Burning Suns:
     * Do not allow player units to get pass the Dwarf Ghost
       without completing the side quest in Tunnels of the Trolls
       (bug #14379)
     * Fixed a few visual glitches in some scenarios
 * Graphics:
   * New base frames for Drake Flare, Flameheart
   * New portraits for Grand Knight (alt), Lancer, Orc Grunt (two alts)
 * Language and i18n:
   * Updated translations: Czech, Dutch, Finnish, German, Hungarian, Italian,
     Latin, Lithuanian, Portuguese (Brazil), Russian
 * User interface:
   * Instead of "crashing" upon invalid markup try to show the raw text
   * Found a better fix for truncating the campaign description (bug #14328)
   * Fix storyscreen buttons occasionally disappearing (bug #13779)
   * Fix not being able to cancel the different version message (bug #14438)
   * Fix not being able to close corrupted file dialog (bug #13764, #14058)
   * Improve display order of unit healing (patch #1343)
   * Fix the new-widgets addon list dialog
   * Add fallback scrollbars if a window doesn't fit (bug #13180)
   * Switch to the new MP lobby
   * Fix a NULL pointer deferring in the hover code
   * Protect against widgets being smaller as expected causing images with
     negative sizes (bug #14525)
 * WML engine:
   * Added two array element lookup macros, LOOKUP_INDEX and LOOKUP_VALUE
   * Event "turn refresh" is now fired at turn 1 too
 * Miscellaneous and bugfixes:
   * Using a hotkey to reload during an attack no longer disables the mouse
     (http://www.wesnoth.org/forum/viewtopic.php?f=4&t=27616)
   * Removed some unused Drake macros from animation_utils