@@ -7,6 +7,8 @@ Version 1.7.8+svn:
    * Updated translations: Czech, French, German, Latin, Polish,
      Portuguese (Brazil).
 
+ * User interface:
+   * Increasing the size of the MP lobby works properly.
 
 Version 1.7.8-beta1:
  * Campaigns:
@@ -22,7 +24,7 @@ Version 1.7.8-beta1:
    * Updated translations: Czech, Dutch, Finnish, German, Hungarian, Italian,
      Latin, Lithuanian, Portuguese (Brazil), Russian.
 
-* User interface:
+ * User interface:
    * Fixed storyscreen buttons occasionally disappearing.
    * Improved display order of unit healing. (patch #1343)
    * Switched to the new MP lobby.
